# dhcpsql

./: BUILD_SUCCESS_SUMMARY.md  CMakeLists.txt  DOCKER_SETUP.md  HELP_IMPLEMENTATION.md  MODERNIZATION_REPORT.md  Makefile  Makefile.new  Makefile.old  PROJECT-COMPLETE.md  PROJECT_STRUCTURE.md  README.md  build.sh  dhcpd.h  docker-compose.yml  files.c  options.c  options.h  serverpacket.c  serverpacket_mysql.c  start-dhcp.sh  static_leases_mysql.c  svn-commit.tmp
config/: dhcp.sql  modern_udhcpd.conf  sample-data.sql  udhcpd-docker.conf  udhcpd-host.conf  udhcpd.conf
config/CVS/: Entries  Repository
docker/: Dockerfile  docker-compose.yml
docker/output/: dumpleases  udhcpd
docs/: AUTHORS  README.dhcpsql  README_MODERNIZED.md
samples/CVS/: Root
scripts/: deploy.sh  summary.sh
src/client/: clientpacket.c  clientsocket.c  dhcpc.c  script.c
src/common/: common.c  options.c  packet.c  pidfile.c  signalpipe.c  socket.c
src/server/: arpping.c  dhcpd.c  files.c  leases.c  serverpacket.c  serverpacket_mysql.c  static_leases.c  static_leases_mysql.c
src/utils/: dumpleases.c
tests/: CMakeLists.txt  test_common.c
